--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title></title>
 </head>
 <body>
-    Welcome To My New Phone App
+ Hello Buddy,   Welcome To My New Phone App
 </body>
 </html>
