--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <html>
 <head runat="server">  
-<script type="text/javascript" src="jquery-1.10.2.js"></script>  
+<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>  
   <title>My Page</title>
 <script>
 $(document).ready(function() {
